# Lifts-PE

./: .gitignore  CMakeLists.txt  README.md  graphs.py  model.py
src/: elevator.cpp  elevator.hpp  elevator_system.cpp  elevator_system.hpp  log.cpp  log.hpp  simulation.cpp  simulation.hpp  user.cpp  user.hpp
src/algorithms/: look.cpp  scan.cpp
src/generation/: random_functions.cpp  random_functions.hpp  user_generation.cpp  user_generation.hpp
src/user_presets/: pe_group.cpp  pe_group.hpp
tests/: evaluation_one_src_multi_targ.cpp  hi.cpp  look_one_src_multi_targ.cpp  look_one_src_multi_targ_two.cpp  look_test.cpp  one_src_multi_targ_two_elevators.cpp  one_user_naive.cpp  random_tests.cpp  realistic_look.cpp  realistic_look_two.cpp  realistic_look_two_elev.cpp  realistic_scan.cpp  realistic_scan_two.cpp  scan_one_src_multi_targ.cpp  scan_one_src_multi_targ_two.cpp  scan_test.cpp
